2013-07-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c: Better fix for	Bug #1252, inverted parallel axis labels

2013-07-02  Ulrich Müller  <ulimueller@users.sf.net>

	* docs/doc2texi.el:  Provide a substitute for the lisp routine
	replace-regexp-in-string, which is missing in xemacs prior to version
	25.1.something.

	* docs/Makefile.in:  Modify build commands for gnuplot.texi so that
	xemacs and newer emacs (25.1) are happy.

2013-07-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (plot_ticlabel_using):  Explicit error message if
	required parentheses are missing from using spec.
	Bug #1256

	* src/time.c (gstrptime): Pass through fractional seconds read with
	time format "%s"

2013-06-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (load_file): Expand macros up to 3 levels deep when 
	stepping through a "load" operation.  This matches the depth allowed
	at the top level command line.
	Bug #1246

	* src/graph3d.c (draw3d_graphbox):  "set [xy]label rotate parallel"
	is affected by the direction of the complementary axis.
	Bug #1252

2013-06-27  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/graphics.c (do_ellipse): Repair atrocious pointer casts
	spotted by J. Bollinger.

2013-06-24  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/util.c|h (existfile):  New (missing) routine.

2013-06-22  Mojca Miklavec  <mojca.miklavec.lists@gmail.com>

	* term/context.trm: Explicitly disable color in standalone ConTeXt
	documents when monochrome option is chosen.

2013-06-18  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/datafile.c (plot_option_every):  Treat negative numbers as
	indicating "default value".

2013-06-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_tokenise):  Get rid of erroneous test against
	axis_array[foo].timefmt (always evaluates as TRUE).

2013-06-07  Thomas Mattison  <mattison <at> phas.ubc.ca>

	* src/fit.c (regress):  Fit did not converge if maximum lambda was